Correção Botão Alterar Senha Usuário

--- a/src/app/pages/usuarios/alterar-senha/alterar-senha.component.html
+++ b/src/app/pages/usuarios/alterar-senha/alterar-senha.component.html
@@ -6,8 +6,8 @@
     </div>
     <div class="p-d-flex p-jc-between">
       <div>
-        <button pButton pRipple type="button" class="p-button-raised p-button-primary" icon="pi pi-angle-left"
-          pTooltip="Voltar" tooltipPosition="top" routerLink="/pages/usuarios"></button>
+        <button pButton pRipple type="button" class="p-button-raised p-button-warning" icon="pi pi-angle-left"
+          pTooltip="Voltar" tooltipPosition="top" routerLink="/usuarios"></button>
       </div>
     </div>
     <br>
@@ -44,7 +44,7 @@
         <div class="grid  justify-content-center mt-2">
           <div class="col-12 md:col-6 lg:col-3">
             <button pButton pRipple type="submit" label="Confirmar" icon="fas fa-save" [disabled]="f.invalid"
-              class="p-button-raised p-button-primary w-full"></button>
+              class="p-button-raised p-button-warning w-full"></button>
           </div>
         </div>
       </p-footer>
