--- a/src/app/pages/motivos/cadastro-motivo/cadastro-motivo.component.html
+++ b/src/app/pages/motivos/cadastro-motivo/cadastro-motivo.component.html
@@ -12,10 +12,10 @@
       <div class="grid justify-content-center">
         <div class="col-12 md:col-6 lg:col-4">
           <h6><span class="obrigatorio">*</span>Descrição</h6>
-          <!--TODO Forma de input uppercase sem diretiva -->
-          <input class="w-full" oninput="this.value = this.value.toUpperCase()" pInputText name="motivo" type="text"
+         
+          <input class="w-full" pInputText name="motivo" type="text"
             [pKeyFilter]="regex.stringNumber" [(ngModel)]="newmotivo.descricao" #motivo="ngModel"
-            required minlength="4" />
+            required minlength="4" upperCase/>
           <app-message [control]="motivo" error="required" text="Informe a descrição"></app-message>
           <app-message [control]="motivo" error="minlength" text="Mínimo de {{
               motivo.errors?.minlength?.requiredLength
